// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 iimQxX"
>
  <div
    class="card__Container-s87lnr-1 loJCOL"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 kRUSEI"
    >
      <div
        class="card__Item-s87lnr-8 hMKOgT"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 cofKRp"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 dyqJel"
        >
          <p
            class="card__SubTitle-s87lnr-3 iqetgS"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 loJCOL"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 kRUSEI"
    >
      <div
        class="card__Item-s87lnr-8 hMKOgT"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-7 cofKRp"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 dyqJel"
        >
          <p
            class="card__SubTitle-s87lnr-3 iqetgS"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 iimQxX"
>
  <div
    class="card__Container-s87lnr-1 loJCOL"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-5 kRUSEI"
    >
      <div
        class="card__Item-s87lnr-8 hMKOgT"
      >
        <img
          class="card__Image-s87lnr-7 cofKRp"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 dyqJel"
        >
          <p
            class="card__SubTitle-s87lnr-3 iqetgS"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 loJCOL"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-5 kRUSEI"
    >
      <div
        class="card__Item-s87lnr-8 hMKOgT"
      >
        <img
          class="card__Image-s87lnr-7 cofKRp"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-6 dyqJel"
        >
          <p
            class="card__SubTitle-s87lnr-3 iqetgS"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
